<resources>
    <string name="app_name">Shlok_Pr3</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
</resources>